--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,9 @@ body {
   color: rgb(var(--foreground-rgb));
   background-color: rgb(var(--background-start-rgb));
 }
+
+@layer base {
+  h1 {
+    @apply font-bold text-2xl mb-3;
+  }
+}
